# JEPA-KG

./: Data_processing.md  JEPA-KG.py  README.md  dataset_preparation.py  eval_hetionet.py  pyproject.toml  run_hetionet_stp.sh  stp.py  technical.md
datasets/: hetionet_test.jsonl  hetionet_train.jsonl
eval/: eval_hetionet_base.jsonl  eval_hetionet_base_summary.json  eval_hetionet_jepa.jsonl  eval_hetionet_jepa_summary.json
slurm/: eval_hetionet.out  eval_hetionet.sbatch  run_hetionet_jepa.sbatch
