[project]
name = "JEPA-KG"
version = "0.1.0"
description = "JEPA-KG: Semantic Tube Prediction for Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "datasets>=4.7.0",
    "peft>=0.18.1",
    "accelerate>=1.13.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "sentencepiece>=0.2.1",
    "huggingface-hub>=1.7.1",
    "numpy>=2.4.3",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "protobuf>=7.34.0",
    "psutil>=7.2.2",
    "regex>=2026.2.28",
    "rich>=14.3.3",
    "filelock>=3.25.2",
    "fsspec>=2026.2.0",
    "packaging>=26.0",
    "xxhash>=3.6.0",
    "multiprocess>=0.70.18",
    "dill>=0.4.0",
    "aiohttp>=3.13.3",
]
